# Chatroom

./: .gitignore  BUGS.MD  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.fServer  README.md  bugs.md  cpu.prof  docker-compose.yml  fServer.go  install_cli.sh  install_dll.sh  install_env.sh  run_cli.sh
docker/: Dockerfile.server
server-deploy/dockerfiles/: Dockerfile.fServer
source/: client.drawio  server.drawio
src/base/: responsecode.h
src/client/: CMakeLists.txt  Client.cc  Client.h  LoginController.cc  RegisterController.cc  ResponseCode.h  UserClient.cc  UserClient.h  buff.cc  buff.h  client.cc  client.h  friendlist.cc  ftp.cc  func.cc  loginController.cc  main.cc  msg.cc  msgController.cc  opdata  user.cc
src/client/controllers/: createGroup.cc  deleteFriend.cc  deleteGroup.cc  fileService.cc  fileTrans.cc  find.cc  friendVerify.cc  friendlist.cc  groupSetting.cc  groupVerify.cc  grouplist.cc  kickMember.cc  loginController.cc  msgController.cc  prompts.cc  registerController.cc  setOp.cc  settings.cc  userSetting.cc
src/client/controllers/history/: .token
src/client/history/: .token  2085163736@qq.com.data
src/client/include/: ClHeartBeat.h  ClientHeartBeat.h  client.h  ftp.h  msg.h  sig.h  threadpool.h  user.h
src/netlib/: CMakeLists.txt
src/netlib/base/: logger.h
src/netlib/net/: Buffer.h  EventLoop.cc  InetAddress.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  TimerQueue.cc
src/protobuf/: fileInfo.pb.cc  fileInfo.pb.h  fileInfo.proto  msg.pb.cc  msg.pb.h  msg.proto
src/server/: CMakeLists.txt  ChatServer.cc  UserServer.cc  main.cc
src/server/chat/: chat-service.cc  chatServer.cc  msgHandler.cc  service.cc
src/server/ftp/: file-service.cc  ftpServer.cc
src/server/include/: ChatServer.h  DBWriterPool.h  FtpServer.h  ServerHeartBeat.h  ServiceHandler.h  UserServer.h  heartBeat.h
src/server/service/: friends.cc  groups.cc  service.cc
src/server/user/: auth-service.cc  service.cc  userServer.cc  verifiCode.cc
src/user-server/: CMakeLists.txt  ResponseCodeServer.h  UserServer.cc  UserServer.h  main.cc  userServer.cc  userServer.h
